--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   font-weight: 400;
   font-family: "Ubuntu", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
+  min-width: 450px;
 }
 
 .wrapper {
@@ -96,24 +97,26 @@ body {
 }
 
 .catalog {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1em;
   padding-top: 30px;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-items: center;
 }
 
 .catalog-item {
+  max-width: 290px;
   padding: 20px;
-  width: 180px;
-  max-width: 180px;
-  flex-grow: 1;
   margin-bottom: 20px;
   box-shadow: 7px 7px 5px rgba(0,0,0,0.6); 
 }
 
+.catalog-item-wrapper {
+  display: flex;
+}
+
 .catalog-item img {
   width: 100%;
-  border-radius: 10px;
   padding-bottom: 10px;
 }
 
@@ -160,5 +163,14 @@ body {
   padding:10px;
 }
 
+@media(max-width: 960px) {
+  .catalog {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 
-
+@media(max-width: 700px) {
+  .catalog {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
