--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 .logo {
+  padding-left: 20px;
   width:180px;
 }
 
@@ -62,6 +63,8 @@ body {
 
 .phone span {
   white-space: nowrap;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .intro {
@@ -105,9 +108,10 @@ body {
 
 .catalog-item {
   max-width: 290px;
-  padding: 20px;
+  margin: 20px;
   margin-bottom: 20px;
   box-shadow: 7px 7px 5px rgba(0,0,0,0.6); 
+  align-self: center;
 }
 
 .catalog-item-wrapper {
@@ -120,13 +124,13 @@ body {
 }
 
 .catalog-item h3 {
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .catalog-item p {
   font-size: .8em;
   text-align: left;
-  padding-bottom: 20px; 
+  padding: 10px; 
 }
 
 .button {
@@ -134,7 +138,8 @@ body {
   border-radius: 3px;
   font-size: 16px;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 10px 30px;
+  margin: 10px;
   background: red;
   color: #fff;
 }
@@ -147,8 +152,13 @@ body {
   padding-bottom: 30px;
 }
 
+.map p {
+  text-align: center;
+}
+
 .map img {
   width: 100%;
+  max-width: 400px;
 }
 
 .contact-address {
@@ -165,6 +175,25 @@ body {
 @media(max-width: 960px) {
   .catalog {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media(max-width: 830px) {
+  .conract {
+    align-self: center;
+  }
+
+  .map {
+    width: 100%;
+  }
+
+  .map p img {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .contact-address {
+    width: 100%;
   }
 }
 
